# uax

./: Cargo.toml
data/: PropertyValueAliases.txt
examples/: enumgen.rs  tblgen.rs
examples/shared/: mod.rs  range_map.rs
src/: lib.rs  lookup_table.rs  properties.rs  property_enums.rs  property_tables.rs  word_break_table.rs
src/properties/: grapheme_cluster_break.rs  sentence_break.rs  word_break.rs
src/property_tables/: block.rs  grapheme_cluster_break.rs  indic_positional_category.rs  indic_syllabic_category.rs  script.rs  sentence_break.rs  word_break.rs
